--- a/index.html
+++ b/index.html
@@ -1,13 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bella Luna</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>La Bella Luna</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Cinzel', serif;
+      background-color: #fff8f0; 
+      color: #333;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    header {
+      background-color: #008e09; 
+      color: white;
+      padding: 40px 20px;
+      position: relative;
+    }
+
+   
+    .logo-container {
+      position: absolute;
+      top: 15px;
+      left: 10px; 
+      width: 160px; 
+      height: 160px;
+      border-radius: 50%;
+      overflow: hidden; 
+    }
+
+    .logo-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    h1 {
+      font-size: 2.7rem;
+      margin-bottom: 10px;
+    }
+
+    p.intro {
+      max-width: 600px;
+      margin: 20px auto;
+      font-size: 1.1rem;
+      line-height: 1.6;
+      color: #444;
+    }
+
+    strong {
+      color: #b72c2c;
+    }
+
+    button {
+      background-color: #b72c2c;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 25px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background-color: #8e1f1f;
+    }
+
+    main {
+      padding: 60px 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+    }
+
+    footer {
+      background-color: #b72c2c; 
+      background-color: #;
+      color: white;
+      padding: 15px 0;
+      font-size: 0.9rem;
+    }
+
+    
+    @media (max-width: 600px) {
+      .logo-container {
+        position: static;
+        margin: 0 auto 10px;
+        width: 120px;
+        height: 150px;
+      }
+
+      header {
+        padding-top: 20px;
+        text-align: center;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Bella Luna 🌙</h1>
-  <p><a href="menu.html">See our menu</a></p>
+  <header>
+    <div class="logo-container">
+      <img src="c:\Users\azizo\Downloads\WhatsApp_Image_2025-10-21_at_13.43.19_165075f4-removebg-preview (1).png" alt="La Bella Luna Logo">
+    </div>
+
+    <h1>La Bella Luna</h1>
+    <p>Authentic Italian Taste — From Our Kitchen to Your Table</p>
+  </header>
+
+  <main>
+    <p class="intro">
+      Welcome to <strong>La Bella Luna</strong>, where the rich traditions of Italian cooking come alive.
+      Enjoy handmade pasta and wood-fired pizza in a cozy, elegant setting.
+    </p>
+
+    <a href="Menu.html">
+      <button>Menu</button>
+    </a>
+    <a href="Book a table.html">
+      <button>Book a Table</button>
+    </a>
+    <a href="about.html"blank">  
+      <button>About</button></a>
+  </main>
+
+  <footer>
+    <p>© 2025 La Bella Luna | Crafted with love in Italy 🍝</p>
+  </footer>
+
 </body>
 </html>
