--- a/Menu.html
+++ b/Menu.html
@@ -124,7 +124,7 @@ img {
 <body>
   <header>
      <div class="logo-container">
-      <img src="c:\Users\azizo\Downloads\WhatsApp_Image_2025-10-21_at_13.43.19_165075f4-removebg-preview (1).png" alt="La Bella Luna Logo">
+      <img src="logo.jpg" alt="La Bella Luna Logo">
     </div>
     <h1>La Bella Luna</h1>
     <p>Authentic Italian Taste — From Our Kitchen to Your Table</p>
@@ -145,21 +145,21 @@ img {
         <p>
  <div style="display:inline-block; margin:10px;">
     <a href="pizza.html"blank">
-      <img src="c:\Users\azizo\Downloads\450cc5342a1d1cbb55729ed944300576.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
+      <img src="pizza.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
     </a>
     <p>pizza</p>
   </div><p>
     <div style="text-align:center;">
  <div style="display:inline-block; margin:10px;">
     <a href="pasta.html"blank">
-      <img src="c:\Users\azizo\project\WhatsApp Image 2025-10-22 at 19.19.11_cb671657.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
+      <img src="pasta.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
     </a>
     <p>pasta</p>
     
   </div>
  <div style="display:inline-block; margin:10px;">
     <a href="sweets.html"blank">
-      <img src="c:\Users\azizo\project\WhatsApp Image 2025-10-22 at 19.19.12_15f40135.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
+      <img src="desserts.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
     </a>
     <p>sweets</p>
   </div> 
@@ -167,19 +167,19 @@ img {
 
   <div style="display:inline-block; margin:10px;">
     <a href="soups.html"blank">
-      <img src="c:\Users\azizo\project\WhatsApp Image 2025-10-22 at 19.19.12_c3eaa121.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
+      <img src="soup.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
     </a>
     <p>soups</p>
   </div>
  <div style="display:inline-block; margin:10px;">
     <a href="appetizers.html"blank">
-      <img src="c:\Users\azizo\project\WhatsApp Image 2025-10-22 at 19.19.13_ae43fba1.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
+      <img src="appetizers.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
     </a>
     <p>appetizers</p>
   </div>
   <div style="display:inline-block; margin:10px;">
     <a href="drinks.html"blank">
-      <img src="c:\Users\azizo\Downloads\Types-of-Italian-coffee-drinks-cappuccino.jpg" alt="inaractive photoo" class="drinks" style="width: 50px height: 300px;">
+      <img src="drinks.jpg" alt="inaractive photoo" class="drinks" style="width: 50px height: 300px;">
     </a>
     <p>Drinks</p>
   </div>
