--- a/pizza.html
+++ b/pizza.html
@@ -91,7 +91,7 @@
 
   <header>
      <div class="logo-container">
-      <img src="c:\Users\azizo\Downloads\WhatsApp_Image_2025-10-21_at_13.43.19_165075f4-removebg-preview (1).png" alt="La Bella Luna Logo">
+      <img src="logo.jpg" alt="La Bella Luna Logo">
     </div>
     <h1>La Bella Luna</h1>
     <p>Authentic Italian Taste — From Our Kitchen to Your Table</p>
@@ -101,7 +101,7 @@
         <strong>PIZZA</strong>
     </p>
   </main>
- <img src="c:\Users\azizo\Downloads\La Bella Luna.png" alt="inaractive photo" class="img" style="width: 1400px; height: 1000px;">
+ <img src="menu.png" alt="inaractive photo" class="img" style="width: 1400px; height: 1000px;">
  <p>
 
  </p>
