--- a/Book a table.html
+++ b/Book a table.html
@@ -87,7 +87,7 @@
 
   <header>
      <div class="logo-container">
-      <img src="c:\Users\azizo\Downloads\WhatsApp_Image_2025-10-21_at_13.43.19_165075f4-removebg-preview (1).png" alt="La Bella Luna Logo">
+      <img src="logo.jpg" alt="La Bella Luna Logo">
     </div>
     <h1>La Bella Luna</h1>
     <p>Authentic Italian Taste — From Our Kitchen to Your Table</p>
