--- a/proto.html
+++ b/proto.html
@@ -107,7 +107,7 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="c:\Users\azizo\Downloads\WhatsApp_Image_2025-10-21_at_13.43.19_165075f4-removebg-preview (1).png" alt="La Bella Luna Logo">
+      <img src="logo.jpg" alt="La Bella Luna Logo">
     </div>
 
     <h1>La Bella Luna</h1>
