--- a/Menu.html
+++ b/Menu.html
@@ -124,7 +124,7 @@ img {
 <body>
   <header>
      <div class="logo-container">
-      <img src="logo.jpg" alt="La Bella Luna Logo">
+      <img src="logo.png" alt="La Bella Luna Logo">
     </div>
     <h1>La Bella Luna</h1>
     <p>Authentic Italian Taste — From Our Kitchen to Your Table</p>
