--- a/proto.html
+++ b/proto.html
@@ -107,7 +107,7 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="logo.jpg" alt="La Bella Luna Logo">
+      <img src="logo.png" alt="La Bella Luna Logo">
     </div>
 
     <h1>La Bella Luna</h1>
