Update project files

--- a/Menu.html
+++ b/Menu.html
@@ -158,10 +158,10 @@ img {
     
   </div>
  <div style="display:inline-block; margin:10px;">
-    <a href="sweets.html"blank">
+    <a href="desserts.html"blank">
       <img src="desserts.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
     </a>
-    <p>sweets</p>
+    <p> <strong>Desserts</strong></p>
   </div> 
  
 
