Update project files

--- a/Menu.html
+++ b/Menu.html
@@ -147,21 +147,21 @@ img {
     <a href="pizza.html"blank">
       <img src="pizza.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
     </a>
-    <p>pizza</p>
+    <p>Pizza</p>
   </div><p>
     <div style="text-align:center;">
  <div style="display:inline-block; margin:10px;">
     <a href="pasta.html"blank">
       <img src="pasta.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
     </a>
-    <p>pasta</p>
+    <p>Pasta</p>
     
   </div>
  <div style="display:inline-block; margin:10px;">
     <a href="desserts.html"blank">
       <img src="desserts.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
     </a>
-    <p> <strong>Desserts</strong></p>
+    <p>Desserts</p>
   </div> 
  
 
@@ -169,13 +169,13 @@ img {
     <a href="soups.html"blank">
       <img src="soup.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
     </a>
-    <p>soups</p>
+    <p>Soups</p>
   </div>
  <div style="display:inline-block; margin:10px;">
-    <a href="appetizers.html"blank">
+    <a href="appitezer.html"blank">
       <img src="appetizers.jpg" alt="inaractive photo" style="width: 400px; height: 400px;">
     </a>
-    <p>appetizers</p>
+    <p>Appetizers</p>
   </div>
   <div style="display:inline-block; margin:10px;">
     <a href="drinks.html"blank">
