Updated HTML and CSS files

--- a/Menu.html
+++ b/Menu.html
@@ -124,7 +124,8 @@ img {
 <body>
   <header>
      <div class="logo-container">
-      <img src="logo.png" alt="La Bella Luna Logo">
+  <a href ="proto.html"blank"> 
+      <img src="logo.png" alt="La Bella Luna Logo"></a>
     </div>
     <h1>La Bella Luna</h1>
     <p>Authentic Italian Taste — From Our Kitchen to Your Table</p>
