--- a/proto.html
+++ b/proto.html
@@ -107,7 +107,8 @@
 <body>
   <header>
     <div class="logo-container">
-      <img src="logo.png" alt="La Bella Luna Logo">
+  <a href="proto.html"blank>    
+      <img src="logo.png" alt="La Bella Luna Logo"></a>
     </div>
 
     <h1>La Bella Luna</h1>
