--- a/Book a table.html
+++ b/Book a table.html
@@ -87,7 +87,8 @@
 
   <header>
      <div class="logo-container">
-      <img src="logo.png" alt="La Bella Luna Logo">
+  <a href="proto.html"blank>   
+      <img src="logo.png" alt="La Bella Luna Logo"></a> 
     </div>
     <h1>La Bella Luna</h1>
     <p>Authentic Italian Taste — From Our Kitchen to Your Table</p>
