--- a/appitezer.html
+++ b/appitezer.html
@@ -91,7 +91,8 @@
 
   <header>
      <div class="logo-container">
-      <img src="logo.png" alt="La Bella Luna Logo">
+  <a href="proto.html"blank>    
+      <img src="logo.png" alt="La Bella Luna Logo"></a>
     </div>
     <h1>La Bella Luna</h1>
     <p>Authentic Italian Taste — From Our Kitchen to Your Table</p>
@@ -108,7 +109,7 @@
   <main>
    
     <a href="Menu.html"blank">
-        <button>All Menu</button></a>
+        <button>Back</button></a>
     <a href="about.html"blank">  
         <button>Next</button></a>
 
