Update project files

--- a/desserts.html
+++ b/desserts.html
@@ -16,10 +16,17 @@
     }
 
     header {
-      background-color: #008e09; 
+        background-color: rgba(255, 255, 255, 0.927); 
       background-color: ; 
       color: white;
       padding: 40px 20px;
+    }
+    .gold{
+      color: #dbc204;
+    
+    }
+    .red{
+      color:rgb(193, 9, 9) ;
     }
 
      .logo-container {
@@ -94,7 +101,7 @@
   <a href="proto.html"blank   >
       <img src="logo.png" alt="La Bella Luna Logo"></a>
     </div>
-    <h1>La Bella Luna</h1>
+    <h1> <span class="gold">La</span> <span class="red" >Bella Luna</span></h1>
     <p>Authentic Italian Taste — From Our Kitchen to Your Table</p>
   </header>
   <main>
