--- a/proto.html
+++ b/proto.html
@@ -73,7 +73,7 @@
 }
     button {
       background-color: rgb(144, 16, 16);
-      color: #dbc204;
+      color: #ffffff;
       border: none;
       padding: 10px 20px;
       border-radius: 25px;
