--- a/pizza.html
+++ b/pizza.html
@@ -16,15 +16,22 @@
     }
 
     header {
-      background-color: #008e09; 
+        background-color: rgba(255, 255, 255, 0.927); 
       background-color: ; 
-      color: white;
-      padding: 40px 20px;
+      color: rgb(193, 9, 9) ;
+      padding: 20px 20px;
+    }
+    .gold{
+      color: #dbc204;
+    
+    }
+    .red{
+      color:rgb(193, 9, 9) ;
     }
 
      .logo-container {
       position: absolute;
-      top: 15px;
+      top: 28px;
       left: 10px; 
       width: 160px; 
       height: 160px;
@@ -32,8 +39,8 @@
       overflow: hidden; 
     }
     .logo-container img {
-      width: 100%;
-      height: 100%;
+      width: 80%;
+      height: 80%;
       object-fit: cover;
     }
 
@@ -56,7 +63,7 @@
     }
 
     button {
-      background-color: #b72c2c;
+      background-color: rgb(144, 16, 16);
       color: white;
       border: none;
       padding: 10px 20px;
@@ -64,6 +71,7 @@
       cursor: pointer;
       font-size: 1rem;
       transition: 0.3s;
+      font-family: 'Cinzel', serif
     }
 
     button:hover {
@@ -81,9 +89,23 @@
      footer {
       background-color: #b72c2c; 
       background-color: #;
-      color: white;
+      color: #dbc204 ;
       padding: 15px 0;
       font-size: 0.9rem;
+    }
+
+     @media (max-width: 600px) {
+      .logo-container {
+        position: static;
+        margin: 0 auto 10px;
+        width: 120px;
+        height: 150px;
+      }
+
+      header {
+        padding-top: 20px;
+        text-align: center;
+      }
     }
   </style>
 </head>
@@ -94,7 +116,7 @@
   <a href="proto.html"blank>  
       <img src="logo.png" alt="La Bella Luna Logo"></a>  
     </div>
-    <h1>La Bella Luna</h1>
+    <h1> <span class="gold">La</span> <span class="red" >Bella Luna</span></h1>
     <p>Authentic Italian Taste — From Our Kitchen to Your Table</p>
   </header>
   <main>
@@ -110,7 +132,7 @@
    
     <a href="Menu.html"blank">
         <button>All Menu</button></a>
-    <a href="about.html"blank">  
+    <a href="pasta.html"blank">  
         <button>Next</button></a>
 
   </main>
