Update project files

--- a/appitezer.html
+++ b/appitezer.html
@@ -86,7 +86,7 @@
 
 
      footer {
-      background-color: #b72c2c; 
+      background-color: #dbc204; 
       background-color: #;
       color: white;
       padding: 15px 0;
