--- a/desserts.html
+++ b/desserts.html
@@ -115,9 +115,9 @@
  </p>
   <main>
    
-    <a href="Menu.html"blank">
-        <button>All Menu</button></a>
-    <a href="about.html"blank">  
+    <a href="pasta.html"blank">
+        <button>Back</button></a>
+    <a href="about"blank">  
         <button>Next</button></a>
 
   </main>
