--- a/pasta.html
+++ b/pasta.html
@@ -86,7 +86,7 @@
 
 
      footer {
-      background-color: #b72c2c; 
+      background-color: #dbc204; 
       background-color: #;
       color: white;
       padding: 15px 0;
@@ -117,7 +117,7 @@
    
     <a href="pizza.html"blank">
         <button>Back</button></a>
-    <a href="about.html"blank">  
+    <a href="desserts.html"blank">  
         <button>Next</button></a>
 
   </main>
