Update project files

--- a/appitezer.html
+++ b/appitezer.html
@@ -86,9 +86,9 @@
 
 
      footer {
-      background-color: #dbc204; 
+      background-color: #b72c2c; 
       background-color: #;
-      color: white;
+      color:#dbc204;
       padding: 15px 0;
       font-size: 0.9rem;
     }
