--- a/desserts.html
+++ b/desserts.html
@@ -88,7 +88,7 @@
      footer {
       background-color: #b72c2c; 
       background-color: #;
-      color: white;
+      color: #dbc204;
       padding: 15px 0;
       font-size: 0.9rem;
     }
