--- a/Menu.html
+++ b/Menu.html
@@ -55,7 +55,8 @@
       color: #ff0000;
     }
 
-    strong { color: #b72c2c; }
+    strong { color: #b72c2c;
+    font-size: x-large;}
 
     button {
       background-color: #b72c2c;
@@ -74,10 +75,29 @@
     main {
       padding: 60px 20px;
       display: flex;
-      flex-direction: column;
+      flex-direction: row-reverse;
       align-items: center;
       gap: 15px;
+      margin-top: -100px;
     }
+    main2{
+      padding: 60px 20px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 15px;
+      margin-top: -20px;
+      margin-left: 525px;
+    }
+    
+    main3 {
+      padding: 60px 20px;
+      display: flex;
+      flex-direction: column-reverse;
+      align-items:center;
+      gap: 1px;
+      margin-top: -10px;
+      }
 
     footer {
       background-color: rgb(144, 16, 16); 
@@ -101,26 +121,26 @@
 
     .gallery {
       display: flex;
-      flex-wrap: wrap;        /* allows multiple rows */
-      justify-content: center; /* centers the gallery */
+      flex-wrap: wrap;
+      justify-content: center;
       gap: 20px;
       margin-top: 30px;
     }
 
     .gallery .photo {
-      width: 30%;             /* 3 photos per row */
+      width: 30%;  
       text-align: center;
     }
 
     .gallery .photo img {
       width: 100%;
-      height: 300px;          /* fixed height for all images */
-      object-fit: cover;      /* keeps images filled without distortion */
+      height: 300px; 
+      object-fit: cover;  
       border-radius: 30px;
     }
 
     @media (max-width: 900px) {
-      .gallery .photo { width: 45%; } /* 2 per row on medium screens */
+      .gallery .photo { width: 45%; }
     }
 
     @media (max-width: 600px) {
@@ -133,7 +153,7 @@
 
       header { padding-top: 20px; text-align: center; }
 
-      .gallery .photo { width: 90%; } /* 1 per row on mobile */
+      .gallery .photo { width: 90%; }
     }
   </style>
 </head>
@@ -147,16 +167,17 @@
     <h1><span class="gold">La</span> <span class="red">Bella Luna</span></h1>
     <p>Authentic Italian Taste — From Our Kitchen to Your Table</p>
   </header>
-
-  <main>
-    <p class="intro">
-      <strong>Our Dishes</strong>
-    </p>
-
+ <main2>
     <a href="proto.html"><button>Main Page</button></a>
     <a href="Book a table.html"><button>Book a Table</button></a>
     <a href="about.html"><button>About</button></a>
-
+    </main2>
+    <p>
+      <strong>Our Dishes</strong>
+    </p>
+    <p></p>
+  <main>
+   
     <div class="gallery">  
       <div class="photo">    
         <a href="pizza.html"><img src="pizza.jpg" alt="Pizza"></a>
