--- a/appitezer.html
+++ b/appitezer.html
@@ -18,7 +18,7 @@
     header {
         background-color: rgba(255, 255, 255, 0.927); 
       background-color: ; 
-      color: white;
+      color: rgb(193, 9, 9);
       padding: 40px 20px;
     }
     .gold{
@@ -74,7 +74,7 @@
     }
 
     button:hover {
-      background-color: #8e1f1f; 
+      background-color: #dbc204; 
     }
 
 
