--- a/desserts.html
+++ b/desserts.html
@@ -18,8 +18,9 @@
     header {
         background-color: rgba(255, 255, 255, 0.927); 
       background-color: ; 
-      color: white;
-      padding: 40px 20px;
+      color: rgb(193, 9, 9);
+      padding: 20px 20px;
+      position: relative;
     }
     .gold{
       color: #dbc204;
@@ -31,7 +32,7 @@
 
      .logo-container {
       position: absolute;
-      top: 15px;
+      top: 28px;
       left: 10px; 
       width: 160px; 
       height: 160px;
@@ -39,14 +40,14 @@
       overflow: hidden; 
     }
     .logo-container img {
-      width: 100%;
-      height: 100%;
+      width: 80%;
+      height: 80%;
       object-fit: cover;
     }
 
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 2.7rem;
       margin-bottom: 10px;
     }
 
@@ -55,11 +56,12 @@
       margin: 20px auto;
       font-size: 1.1rem;
       line-height: 1.6;
-      color: #444;
+      color: #ff0000;
     }
 
     strong {
       color: #b72c2c; 
+      font-size: x-large;
     }
 
     button {
@@ -71,10 +73,11 @@
       cursor: pointer;
       font-size: 1rem;
       transition: 0.3s;
+      font-family: "Cinzel", serif;
     }
 
     button:hover {
-      background-color: #8e1f1f; 
+      background-color: #dbc204; 
     }
 
 
@@ -86,7 +89,7 @@
 
 
      footer {
-      background-color: #b72c2c; 
+      background-color: rgb(144, 16, 16); 
       background-color: #;
       color: #dbc204;
       padding: 15px 0;
