--- a/pizza.html
+++ b/pizza.html
@@ -20,6 +20,7 @@
       background-color: ; 
       color: rgb(193, 9, 9) ;
       padding: 20px 20px;
+      position: relative;
     }
     .gold{
       color: #dbc204;
@@ -46,7 +47,7 @@
 
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 2.7rem;
       margin-bottom: 10px;
     }
 
@@ -55,11 +56,12 @@
       margin: 20px auto;
       font-size: 1.1rem;
       line-height: 1.6;
-      color: #444;
+      color: #ff0000;
     }
 
     strong {
       color: #b72c2c; 
+       font-size: x-large;
     }
 
     button {
@@ -75,7 +77,7 @@
     }
 
     button:hover {
-      background-color: #8e1f1f; 
+      background-color: #dbc204; 
     }
 
 
@@ -87,7 +89,7 @@
 
 
      footer {
-      background-color: #b72c2c; 
+      background-color: rgb(144, 16, 16); 
       background-color: #;
       color: #dbc204 ;
       padding: 15px 0;
