Update project files

--- a/Drinks.html
+++ b/Drinks.html
@@ -208,11 +208,11 @@
   </header>
   <main>
      <p class="intro">
-        <strong>PIZZA</strong>
+        <strong>Drinks</strong>
     </p>
   </main>
 
- <img src="menu.png" alt="inaractive photo" class="img" style="width: 1400px; height: 1000px;">
+ <img src="drinks menu.jpg" alt="inaractive photo" class="img" style="width: 1400px; height: 1000px;">
  <p>
  
 </p>
@@ -220,8 +220,7 @@
   
     <a href="Menu.html"blank">
         <button>All Menu</button></a>
-    <a href="pasta.html"blank">  
-        <button>Next</button></a>
+    
 
   </main>
  
