--- a/Menu.html
+++ b/Menu.html
@@ -192,7 +192,7 @@
         <p>Desserts</p>
       </div>
       <div class="photo">
-        <a href="soups.html"><img src="soup.jpg" alt="Soups"></a>
+        <a href="Soup.html"><img src="soup.jpg" alt="Soups"></a>
         <p>Soups</p>
       </div>
       <div class="photo">
@@ -200,7 +200,7 @@
         <p>Appetizers</p>
       </div>
       <div class="photo">
-        <a href="drinks.html"><img src="drinks.jpg" alt="Drinks"></a>
+        <a href="Drinks.html"><img src="drinks.jpg" alt="Drinks"></a>
         <p>Drinks</p>
       </div>
     </div>
