--- a/appitezer.html
+++ b/appitezer.html
@@ -120,7 +120,7 @@
    
     <a href="Menu.html"blank">
         <button>Back</button></a>
-    <a href="about.html"blank">  
+    <a href="Drinks.html"blank">  
         <button>Next</button></a>
 
   </main>
