--- a/Book a table.html
+++ b/Book a table.html
@@ -1,123 +1,174 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>La Bella Luna</title>
+  <title>La Bella Luna | Reservation</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
-
   <style>
     body {
       font-family: "Cinzel", serif;
       background-color: #fff8f0;
-      color: #333; 
+      color: #333;
       margin: 0;
       padding: 0;
       text-align: center;
     }
 
     header {
-        background-color: rgba(255, 255, 255, 0.927);
-      background-color: ; 
-      color: white;
-      padding: 40px 20px;
-    }
-    .gold{
-      color: #dbc204;
-    
-    }
-    .red{
-      color:rgb(193, 9, 9) ;
+      background-color: rgba(255, 255, 255, 0.927);
+      color: rgb(193, 9, 9);
+      padding: 20px 20px;
+      position: relative;
     }
 
-     .logo-container {
+    .logo-container {
       position: absolute;
-      top: 15px;
-      left: 10px; 
-      width: 160px; 
+      top: 28px;
+      left: 10px;
+      width: 160px;
       height: 160px;
       border-radius: 50%;
-      overflow: hidden; 
+      overflow: hidden;
     }
+
     .logo-container img {
-      width: 100%;
-      height: 100%;
+      width: 80%;
+      height: 80%;
       object-fit: cover;
     }
 
+    .gold { color: #dbc204; }
+    .red { color: rgb(193, 9, 9); }
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 2.7rem;
       margin-bottom: 10px;
     }
 
-    p.intro {
+    .container {
       max-width: 600px;
-      margin: 20px auto;
-      font-size: 1.1rem;
-      line-height: 1.6;
-      color: #444;
+      margin: 50px auto;
+      background-color: white;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
     }
 
-    strong {
-      color: #b72c2c; 
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+    }
+
+    label {
+      text-align: left;
+      font-weight: 600;
+      color: #b72c2c;
+    }
+
+    input, select, textarea {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-family: "Cinzel", serif;
+      font-size: 1rem;
     }
 
     button {
       background-color: #b72c2c;
       color: white;
       border: none;
-      padding: 10px 20px;
+      padding: 12px;
       border-radius: 25px;
       cursor: pointer;
       font-size: 1rem;
-      transition: 0.3s;
+      transition: background-color 0.3s;
     }
 
     button:hover {
       background-color: #8e1f1f;
     }
 
-
-
-
-
-     footer {
-      background-color: #b72c2c; 
-      background-color: #;
+    footer {
+      background-color: #b72c2c;
       color: white;
       padding: 15px 0;
+      margin-top: 50px;
       font-size: 0.9rem;
+    }
+
+    a.back {
+      display: inline-block;
+      margin-top: 20px;
+      color: #b72c2c;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    a.back:hover {
+      color: #8e1f1f;
+    }
+
+    #success-message {
+      display: none;
+      background-color: #e8ffe8;
+      border: 1px solid #70c470;
+      padding: 15px;
+      margin-top: 20px;
+      border-radius: 10px;
+      color: #2e7d32;
+      font-weight: 600;
     }
   </style>
 </head>
 <body>
 
   <header>
-     <div class="logo-container">
-  <a href="proto.html"blank>   
-      <img src="logo.png" alt="La Bella Luna Logo"></a> 
+    <div class="logo-container">
+      <a href="proto.html" target="_blank">
+        <img src="logo.png" alt="La Bella Luna Logo">
+      </a>
     </div>
-    <h1> <span class="gold">La</span> <span class="red" >Bella Luna</span></h1>
-    <p>Authentic Italian Taste — From Our Kitchen to Your Table</p>
+    <h1><span class="gold">La</span> <span class="red">Bella Luna</span></h1>
+    <p>Reserve your table — we can’t wait to serve you 🍝</p>
   </header>
 
-  <main>
-    <p class="intro">
-        <strong>Book a table</strong>
-    </p>
-   <a href="proto.html"blank">
-        <button>Main page</button></a>
-    <a href="Menu.html"blank">
-        <button>Menu</button></a>
-    <a href="about.html"blank">  
-        <button>About</button></a>
-  </main>
-<p>
-</p>
-<p1></p1>
-<p2></p2>
-  <footer>
-    <p>© 2025 La Bella Luna | Crafted with love in Italy 🍝</p>
-  </footer>
-</body>
-</html>
+  <div class="container">
+    <h2>Book a Table</h2>
+    <form id="reservationForm">
+      <label for="name">Full Name</label>
+      <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+
+      <label for="email">E-mail</label>
+      <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+      <label for="phone">Phone Number</label>
+      <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
+
+      <label for="date">Date</label>
+      <input type="date" id="date" name="date" required>
+
+      <label for="time">Time</label>
+      <input type="time" id="time" name="time" required>
+
+      <label for="guests">Number of Guests</label>
+      <select id="guests" name="guests" required>
+        <option value="">Select</option>
+        <option>1 person</option>
+        <option>2 people</option>
+        <option>3 people</option>
+        <option>4 people</option>
+        <option>5+ people</option>
+      </select>
+
+      <label for="message">Special Requests</label>
+      <textarea id="message" name="message" rows="4" placeholder="Write any special requests..."></textarea>
+
+      <button type="submit">Confirm Reservation</button>
+    </form>
+
+    <div id="success-message">✅ Thank you! Your reservation has been submitted successfully.</div>
+
+    <a href="proto.html" class="back">← Back to Home</a>
