--- a/Soup.html
+++ b/Soup.html
@@ -208,11 +208,11 @@
   </header>
   <main>
      <p class="intro">
-        <strong>PIZZA</strong>
+        <strong>Drinks</strong>
     </p>
   </main>
 
- <img src="menu.png" alt="inaractive photo" class="img" style="width: 1400px; height: 1000px;">
+ <img src="drinks menu.jpg" alt="inaractive photo" class="img" style="width: 1400px; height: 1000px;">
  <p>
  
 </p>
