--- a/soups.html
+++ b/soups.html
@@ -208,19 +208,19 @@
   </header>
   <main>
      <p class="intro">
-        <strong>PIZZA</strong>
+        <strong>Soups</strong>
     </p>
   </main>
 
- <img src="menu.png" alt="inaractive photo" class="img" style="width: 1400px; height: 1000px;">
+ <img src="soups menu.jpg" alt="inaractive photo" class="img" style="width: 1400px; height: 1000px;">
  <p>
  
 </p>
   <main>
   
-    <a href="Menu.html"blank">
-        <button>All Menu</button></a>
-    <a href="pasta.html"blank">  
+    <a href="desserts.html"blank">
+        <button>Back</button></a>
+    <a href="appitezer.html"blank">  
         <button>Next</button></a>
 
   </main>
