Update project files

--- a/Menu.html
+++ b/Menu.html
@@ -192,7 +192,7 @@
         <p>Desserts</p>
       </div>
       <div class="photo">
-        <a href="Soup.html"><img src="soup.jpg" alt="Soups"></a>
+        <a href="soups.html"><img src="soup.jpg" alt="Soups"></a>
         <p>Soups</p>
       </div>
       <div class="photo">
