--- a/soups.html
+++ b/soups.html
@@ -178,6 +178,23 @@
 <body>
 
   <header>
+    <details class="menu">
+  <summary>
+    <div class="bar">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </summary>
+
+  <div class="menu-links">
+    <a href="pasta.html"><button><strong>Pasta</strong></button></a>
+    <hr>
+    <a href="desserts.html"><button><strong>Desserts</strong></button></a><hr>
+    <a href="appitezer.html"><button><strong>Appetizers</strong></button></a><hr>
+    <a href="about.html"><button><strong>Contact</strong></button></a>
+  </div>
+</details>
    
   <details class="menu">
   <summary>
