--- a/pizza.html
+++ b/pizza.html
@@ -187,12 +187,13 @@
       <span></span>
     </div>
   </summary>
-
   <div class="menu-links">
     <a href="pasta.html"><button><strong>Pasta</strong></button></a>
     <hr>
     <a href="desserts.html"><button><strong>Desserts</strong></button></a><hr>
+    <a href="soups.html"><button><strong>Soups</strong></button></a><hr>
     <a href="appitezer.html"><button><strong>Appetizers</strong></button></a><hr>
+    <a href="Drinks.html"><button><strong>Drinks</strong></button></a><hr>
     <a href="about.html"><button><strong>Contact</strong></button></a>
   </div>
 </details>
