--- a/soups.html
+++ b/soups.html
@@ -188,10 +188,13 @@
   </summary>
 
   <div class="menu-links">
-    <a href="pasta.html"><button><strong>Pasta</strong></button></a>
+    <a href="pizza.html"><button><strong>Pizza</strong></button></a><hr>
+     <a href="pasta.html"><button><strong>Pasta</strong></button></a>
     <hr>
     <a href="desserts.html"><button><strong>Desserts</strong></button></a><hr>
+    
     <a href="appitezer.html"><button><strong>Appetizers</strong></button></a><hr>
+    <a href="Drinks.html"><button><strong>Drinks</strong></button></a><hr>
     <a href="about.html"><button><strong>Contact</strong></button></a>
   </div>
 </details>
