--- a/Book a table.html
+++ b/Book a table.html
@@ -121,6 +121,44 @@
       color: #2e7d32;
       font-weight: 600;
     }
+    img { border-radius: 30px; }
+
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .gallery .photo {
+      width: 30%;  
+      text-align: center;
+    }
+
+    .gallery .photo img {
+      width: 100%;
+      height: 300px; 
+      object-fit: cover;  
+      border-radius: 30px;
+    }
+
+    @media (max-width: 900px) {
+      .gallery .photo { width: 45%; }
+    }
+
+    @media (max-width: 600px) {
+      .logo-container {
+        position: static;
+        margin: 0 auto 10px;
+        width: 120px;
+        height: 150px;
+      }
+
+      header { padding-top: 20px; text-align: center; }
+
+      .gallery .photo { width: 90%; }
+    }
   </style>
 </head>
 <body>
@@ -134,7 +172,7 @@
     <h1><span class="gold">La</span> <span class="red">Bella Luna</span></h1>
     <p>Reserve your table — we can’t wait to serve you 🍝</p>
   </header>
-
+<img src="WhatsApp Image 2025-11-14 at 14.09.35_888ad5d5.jpg" alt="resturant desgin" width="700px" height="500px">
   <div class="container">
     <h2>Book a Table</h2>
     <form id="reservationForm">
@@ -145,13 +183,13 @@
       <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
       <label for="phone">Phone Number</label>
-      <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
+      <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" minlength="11" maxlength="11" required>
 
       <label for="date">Date</label>
       <input type="date" id="date" name="date" required>
 
       <label for="time">Time</label>
-      <input type="time" id="time" name="time" required>
+      <input type="time" id="time" name="time" min="12am" max="12pm" required>
 
       <label for="guests">Number of Guests</label>
       <select id="guests" name="guests" required>
@@ -165,10 +203,13 @@
 
       <label for="message">Special Requests</label>
       <textarea id="message" name="message" rows="4" placeholder="Write any special requests..."></textarea>
-
-      <button type="submit">Confirm Reservation</button>
+      
     </form>
-
-    <div id="success-message">✅ Thank you! Your reservation has been submitted successfully.</div>
+    <pr>
+<main>
+      <a href="Thank you.html" blank">
+      <button>Confirm your reservation</button></a>
+      </main>
+   </pr>
 
     <a href="proto.html" class="back">← Back to Home</a>
