--- a/Book a table.html
+++ b/Book a table.html
@@ -175,7 +175,7 @@
 <img src="WhatsApp Image 2025-11-14 at 14.09.35_888ad5d5.jpg" alt="resturant desgin" width="700px" height="500px">
   <div class="container">
     <h2>Book a Table</h2>
-    <form id="reservationForm">
+    <form action="Thank you.html" id="reservationForm">
       <label for="name">Full Name</label>
       <input type="text" id="name" name="name" placeholder="Enter your full name" required >
 
@@ -203,13 +203,9 @@
 
       <label for="message">Special Requests</label>
       <textarea id="message" name="message" rows="4" placeholder="Write any special requests..."></textarea>
-      
+      <button type="submit">Confirm your reservation</button>
     </form>
     <pr>
-<main>
-      <a href="Thank you.html" blank">
-      <button>Confirm your reservation</button></a>
-      </main>
-   </pr>
+
 
     <a href="proto.html" class="back">← Back to Home</a>
