--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@ th, td {
       <tr>
         <td>Zain Eldin Nader</td>
         <td>251002615</td>
-        <td><a href="mailto:m.mohamed2538@nu.edu.eg">m.mohamed2538@nu.edu.eg</a></td>
+        <td><a href="mailto:z.nader2515@nu.edu.eg">z.nader2515@nu.edu.eg</a></td>
       </tr>
     </table>
   </div>
